feat: build implemented